# clicodelog

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  run.sh
clicodelog/: __init__.py  app.py  bookmarks.py  cli.py  config.py  conversation.py  metadata.py  projects.py  search_index.py  server.py  sessions.py  sync.py  utils.py
clicodelog/parsers/: __init__.py  claude.py  codex.py  gemini.py
clicodelog/routes/: __init__.py  bookmarks.py  export.py  projects.py  search.py  sources.py  sync.py
clicodelog/static/css/: base.css  controls.css  layout.css  list.css  messages.css  misc.css  search.css  tags.css  variables.css
clicodelog/static/js/: bookmarks.js  clipboard.js  conversation.js  main.js  projects.js  resize.js  search.js  sessions.js  state.js  sync.js  tags.js  theme.js  utils.js
clicodelog/templates/: index.html  view.html
scripts/: backup-conversations.sh  restore-sync.sh
templates/: index.html
